changed config to more standard stuff

--- a/scripts/pretrain/cifar/cl_lin_pred_min.yaml
+++ b/scripts/pretrain/cifar/cl_lin_pred_min.yaml
@@ -14,13 +14,13 @@ hydra:
 name: "cl_lin_pred_min_cifar10" # change here for cifar100
 method: "cl_lin_pred_min"
 backbone:
-  name: "resnet18"
+  name: "resnet50"
 method_kwargs:
   proj_hidden_dim: 2048
-  proj_output_dim: 2048
-  scale_loss: 0.1
+  proj_output_dim: 128
   mask_fraction: 0.5
   ridge_lambd: 0.0
+  lamb: 0.1
 data:
   dataset: cifar10 # change here for cifar100
   train_path: "./datasets"
@@ -28,15 +28,21 @@ data:
   format: "image_folder"
   num_workers: 4
 optimizer:
-  name: "lars"
+  name: "adamw"
   batch_size: 256
-  lr: 0.3
-  classifier_lr: 0.1
-  weight_decay: 1e-4
-  kwargs:
-    clip_lr: True
-    eta: 0.02
-    exclude_bias_n_norm: True
+  lr: 5e-4
+  weight_decay: 0
+  classifier_lr: 0.01
+#optimizer:
+#  name: "lars"
+#  batch_size: 256
+#  lr: 0.3
+#  classifier_lr: 0.1
+#  weight_decay: 1e-4
+#  kwargs:
+#    clip_lr: True
+#    eta: 0.02
+#    exclude_bias_n_norm: True
 scheduler:
   name: "warmup_cosine"
 checkpoint:
@@ -44,8 +50,7 @@ checkpoint:
   dir: "trained_models"
   frequency: 1
 auto_resume:
-  enabled: True
-
+  enabled: False
 # overwrite PL stuff
 max_epochs: 1000
 devices: [0]
