--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 torch>=1.10.0
 torchvision>=0.11.1
 einops
-pytorch-lightning>=1.7.0, <1.9.0
+pytorch-lightning==2.0.2
 torchmetrics>=0.6.0, <0.12.0
-lightning-bolts>=0.6.0
 tqdm
 wandb
 scipy
