--- a/scripts/pretrain/cifar/cl_lin_pred_min.yaml
+++ b/scripts/pretrain/cifar/cl_lin_pred_min.yaml
@@ -19,9 +19,9 @@ method_kwargs:
   proj_hidden_dim: 2048
   proj_output_dim: 128
   mask_fraction: 0.5
-  lamb: 0.1
+  lamb: 0.2
   ridge_lambd: 0
-  proj_size: 2
+  proj_size: 3
   normalize: True
 data:
   dataset: cifar10 # change here for cifar100
@@ -29,24 +29,24 @@ data:
   val_path: "./datasets"
   format: "image_folder"
   num_workers: 4
-optimizer:
-  name: "adamw"
-  batch_size: 512
-  lr: 5e-4
-  weight_decay: 1e-6
-  classifier_lr: 5e-4
-  kwargs:
-    betas: [0.9, 0.999]
 #optimizer:
-#  name: "lars"
-#  batch_size: 256
-#  lr: 0.3
-#  classifier_lr: 0.1
-#  weight_decay: 1e-4
+#  name: "adamw"
+#  batch_size: 512
+#  lr: 5e-3
+#  weight_decay: 1e-6
+#  classifier_lr: 5e-4
 #  kwargs:
-#    clip_lr: True
-#    eta: 0.02
-#    exclude_bias_n_norm: True
+#    betas: [0.9, 0.999]
+optimizer:
+  name: "lars"
+  batch_size: 256
+  lr: 0.3
+  classifier_lr: 0.1
+  weight_decay: 1e-4
+  kwargs:
+    clip_lr: True
+    eta: 0.02
+    exclude_bias_n_norm: True
 scheduler:
   name: "warmup_cosine"
 checkpoint:
@@ -61,4 +61,4 @@ devices: [0]
 sync_batchnorm: True
 accelerator: "gpu"
 strategy: "ddp"
-precision: 16
+precision: 32
