--- a/Pipfile
+++ b/Pipfile
@@ -27,10 +27,10 @@ seaborn = "*"
 matplotlib = "*"
 umap = "*"
 nvidia-dali-cuda110 = "*"
-pillow-simd = "*"
 protobuf = "~=3.20"
 notebook = "*"
 jupyter = "*"
+pillow = "*"
 
 [dev-packages]
 
