--- a/scripts/pretrain/imagenet-100/barlow.yaml
+++ b/scripts/pretrain/imagenet-100/barlow.yaml
@@ -21,8 +21,8 @@ method_kwargs:
   scale_loss: 0.1
 data:
   dataset: imagenet100
-  train_path: "/home/david/data/imagenet_100/train"
-  val_path: "/home/david/data/imagenet_100/val"
+  train_path: "./datasets/imagenet-100/train"
+  val_path: "./datasets/imagenet-100/val"
   format: "dali"
   num_workers: 4
 optimizer:
@@ -46,8 +46,8 @@ auto_resume:
 
 # overwrite PL stuff
 max_epochs: 400
-devices: [0]
+devices: [0, 1]
 sync_batchnorm: True
 accelerator: "gpu"
 strategy: "ddp"
-precision: 16-mixed
+precision: 16
