--- a/Pipfile
+++ b/Pipfile
@@ -3,11 +3,16 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[[source]]
+url = "https://developer.download.nvidia.com/compute/redist"
+verify_ssl = true
+name = "nvidia"
+
 [packages]
 torch = ">=1.10.0"
 torchvision = ">=0.11.1"
 einops = "*"
-pytorch-lightning = "==1.9.0"
+pytorch-lightning = "==2.0.2"
 torchmetrics = "<0.12.0,>=0.6.0"
 tqdm = "*"
 wandb = "*"
@@ -15,6 +20,12 @@ scipy = "*"
 timm = "*"
 scikit-learn = "*"
 hydra-core = "*"
+matplotlib = "*"
+seaborn = "*"
+pandas = "*"
+umap-learn = "*"
+h5py = "*"
+nvidia-dali-cuda110 = "*"
 
 [dev-packages]
 
