rolled back in hopes of having it fixed

--- a/scripts/pretrain/cifar/cl_lin_pred_min.yaml
+++ b/scripts/pretrain/cifar/cl_lin_pred_min.yaml
@@ -19,7 +19,7 @@ method_kwargs:
   proj_hidden_dim: 2048
   proj_output_dim: 128
   mask_fraction: 0.5
-  lamb: 0.15
+  lamb: 0.2
   ridge_lambd: 0
   proj_size: 3
 data:
@@ -30,7 +30,7 @@ data:
   num_workers: 4
 optimizer:
   name: "lars"
-  batch_size: 128
+  batch_size: 256
   lr: 0.3
   classifier_lr: 0.1
   weight_decay: 1e-4
@@ -46,11 +46,10 @@ checkpoint:
   frequency: 1
 auto_resume:
   enabled: False
-
 # overwrite PL stuff
 max_epochs: 1000
 devices: [0]
 sync_batchnorm: True
 accelerator: "gpu"
 strategy: "ddp"
-precision: 16
+precision: 16-mixed
