--- a/scripts/linear/imagenet-100/vibcreg.yaml
+++ b/scripts/linear/imagenet-100/vibcreg.yaml
@@ -11,14 +11,14 @@ hydra:
     dir: .
 
 name: "vibcreg-imagenet100-linear"
-pretrained_feature_extractor: None
+pretrained_feature_extractor: "/itet-stor/zdavid/net_scratch/Self-Supervised-Learning-with-Predictability-Minimization/trained_models/vibcreg/9tjxisb5/vibcreg-imagenet100-9tjxisb5-ep=399.ckpt"
 backbone:
   name: "resnet18"
 pretrain_method: "vibcreg"
 data:
   dataset: imagenet100
-  train_path: "./datasets/imagenet-100/train"
-  val_path: "./datasets/imagenet-100/val"
+  train_path: "/itet-stor/zdavid/net_scratch/data/ILSVRC2012_img_train_100"
+  val_path: "/itet-stor/zdavid/net_scratch/data/ILSVRC2012_img_val_100"
   format: "dali"
   num_workers: 4
 optimizer:
