One step update version using same optimizer

--- a/scripts/pretrain/cifar/cl_non_lin_pred_minv3.yaml
+++ b/scripts/pretrain/cifar/cl_non_lin_pred_minv3.yaml
@@ -11,24 +11,32 @@ hydra:
   run:
     dir: .
 
-name: "barlow_twins-cifar10-diag" # change here for cifar100
-method: "barlow_twins"
+name: "cl_non_lin_pred_min-cifar10v2" # change here for cifar100
+method: "cl_non_lin_pred_minv2"
 backbone:
   name: "resnet18"
 method_kwargs:
   proj_hidden_dim: 2048
-  proj_output_dim: 2048
-  lamb: 0
-  scale_loss: 0.1
+  proj_output_dim: 128
+  mask_fraction: 0.5
+  lamb: 0.005
+  proj_size: 3
+  pred_type: "mlp"  # [mlp]
+  norm_type: "l2"   # [l2, standardize, both]
+  pred_loss_transform: "log" #[log, sqrt, identity]
+  predictor_kwargs:
+    layers: 3
+    hidden_dim: 2048
+    activation: "relu" # [relu, tanh]
 data:
   dataset: cifar10 # change here for cifar100
   train_path: "./datasets"
   val_path: "./datasets"
   format: "image_folder"
   num_workers: 4
-optimizer:
+optimizer: 
   name: "lars"
-  batch_size: 256
+  batch_size: 512
   lr: 0.3
   classifier_lr: 0.1
   weight_decay: 1e-4
@@ -44,7 +52,6 @@ checkpoint:
   frequency: 1
 auto_resume:
   enabled: False
-
 # overwrite PL stuff
 max_epochs: 1000
 devices: [0]
