--- a/scripts/pretrain/cifar/cl_non_lin_pred_minv3.yaml
+++ b/scripts/pretrain/cifar/cl_non_lin_pred_minv3.yaml
@@ -11,8 +11,8 @@ hydra:
   run:
     dir: .
 
-name: "cl_non_lin_pred_min-cifar10v2" # change here for cifar100
-method: "cl_non_lin_pred_minv2"
+name: "cl_non_lin_pred_min-cifar10v3" # change here for cifar100
+method: "cl_non_lin_pred_minv3"
 backbone:
   name: "resnet18"
 method_kwargs:
@@ -22,7 +22,7 @@ method_kwargs:
   lamb: 0.005
   proj_size: 3
   pred_type: "mlp"  # [mlp]
-  norm_type: "l2"   # [l2, standardize, both]
+  norm_type: "standardize"   # [l2, standardize, both]
   pred_loss_transform: "log" #[log, sqrt, identity]
   predictor_kwargs:
     layers: 3
