--- a/scripts/pretrain/cifar/cl_non_lin_pred_minv3.yaml
+++ b/scripts/pretrain/cifar/cl_non_lin_pred_minv3.yaml
@@ -19,7 +19,8 @@ method_kwargs:
   proj_hidden_dim: 2048
   proj_output_dim: 128
   mask_fraction: 0.5
-  lamb: 0.005
+  lamb: 0.1
+  pred_lamb: 0.01
   proj_size: 3
   pred_type: "mlp"  # [mlp]
   norm_type: "standardize"   # [l2, standardize, both]
