--- a/scripts/pretrain/cifar/cl_non_lin_pred_minv6.yaml
+++ b/scripts/pretrain/cifar/cl_non_lin_pred_minv6.yaml
@@ -26,7 +26,9 @@ method_kwargs:
   norm_type: "standardize"   # [l2, standardize, both]
   pred_loss_transform: "identity" #[log, sqrt, identity]
   max_pred_steps: 200
-  pred_lr: 1e-3
+  pred_weight_decay: 1e-6
+  pred_lr_init: 1e-3
+  pred_steps_target: 25
   pred_train_type: 'overfit'
   pred_clip_grad: -1
   pred_kwargs:
@@ -41,7 +43,7 @@ data:
   num_workers: 4
 optimizer: 
   name: "lars"
-  batch_size: 4096
+  batch_size: 512
   lr: 0.3
   classifier_lr: 0.1
   weight_decay: 1e-4
