--- a/scripts/pretrain/cifar/cl_non_lin_pred_min.yaml
+++ b/scripts/pretrain/cifar/cl_non_lin_pred_min.yaml
@@ -19,9 +19,12 @@ method_kwargs:
   proj_hidden_dim: 2048
   proj_output_dim: 128
   mask_fraction: 0.5
-  lamb: 0.005
+  lamb: 0.1
   ridge_lambd: 0
   proj_size: 3
+  predictor_batch_norm: False
+  predictor_num_hidden_layers: 0
+  val_is_train: False
 data:
   dataset: cifar10 # change here for cifar100
   train_path: "./datasets"
@@ -52,4 +55,4 @@ devices: [0]
 sync_batchnorm: True
 accelerator: "gpu"
 strategy: "ddp"
-precision: 16-mixed
+precision: 32
