--- a/scripts/pretrain/cifar/cl_non_lin_pred_minv6.yaml
+++ b/scripts/pretrain/cifar/cl_non_lin_pred_minv6.yaml
@@ -31,6 +31,7 @@ method_kwargs:
   pred_steps_target: 25
   pred_train_type: 'split_random'
   pred_clip_grad: 0.0
+  clip_pred_loss: 0.0
   patience: 2
   pred_kwargs:
     layers: 2
