Added multiple steps for descrim eval

--- a/scripts/pretrain/cifar/cl_non_lin_pred_minv6.yaml
+++ b/scripts/pretrain/cifar/cl_non_lin_pred_minv6.yaml
@@ -31,6 +31,7 @@ method_kwargs:
   pred_steps_target: 25
   pred_train_type: 'random'
   pred_clip_grad: 0.0
+  pred_eval_steps: 10
   clip_pred_loss: 1.0
   patience: 1
   pred_kwargs:
