Updated config for v4

--- a/scripts/pretrain/cifar/cl_non_lin_pred_minv4.yaml
+++ b/scripts/pretrain/cifar/cl_non_lin_pred_minv4.yaml
@@ -11,7 +11,7 @@ hydra:
   run:
     dir: .
 
-name: "cl_non_lin_pred_min-cifar10v4" # change here for cifar100
+name: "cl_non_lin_pred_minv4-cifar" # change here for cifar100
 method: "cl_non_lin_pred_minv4"
 backbone:
   name: "resnet18"
@@ -20,18 +20,25 @@ method_kwargs:
   proj_output_dim: 128
   mask_fraction: 0.5
   lamb: .1
-  pred_lamb: 1
+  pred_lamb: 0.5
   proj_size: 3
   pred_type: "mlp"  # [mlp]
   norm_type: "standardize"   # [l2, standardize, both]
-  pred_loss_transform: "identity" #[log, sqrt, identity]
-  max_pred_steps: 200
-  pred_lr: 1e-3
+  pred_loss_transform: "log" #[log, sqrt, identity]
+  max_pred_steps: 500
+  pred_weight_decay: 1e-6
+  pred_lr_init: 1e-3
+  pred_steps_target: 25
+  pred_train_type: 'random'
+  pred_clip_grad: 0.0
+  pred_eval_steps: 10
+  clip_pred_loss: 1.0
+  patience: 1
   pred_kwargs:
-    k: 2
-    layers: 1
+    k: 4
+    layers: 2
     hidden_dim: 128
-    activation: "tanh" # [relu, tanh]
+    activation: "relu" # [relu, tanh]
 data:
   dataset: cifar10 # change here for cifar100
   train_path: "./datasets"
@@ -62,4 +69,5 @@ devices: [0]
 sync_batchnorm: True
 accelerator: "gpu"
 strategy: "ddp"
-precision: 16-mixed
+precision: 32
+seed: 0
