--- a/scripts/pretrain/cifar/cl_non_lin_pred_minv4.yaml
+++ b/scripts/pretrain/cifar/cl_non_lin_pred_minv4.yaml
@@ -25,11 +25,11 @@ method_kwargs:
   pred_type: "mlp"  # [mlp]
   norm_type: "standardize"   # [l2, standardize, both]
   pred_loss_transform: "log" #[log, sqrt, identity]
-  max_pred_steps: 500
+  max_pred_steps: 50
   pred_weight_decay: 1e-6
   pred_lr_init: 1e-3
   pred_steps_target: 25
-  pred_train_type: 'random'
+  pred_train_type: 'split'
   pred_clip_grad: 0.0
   pred_eval_steps: 10
   clip_pred_loss: 1.0
