--- a/scripts/pretrain/cifar/cl_non_lin_pred_minv6_default.yaml
+++ b/scripts/pretrain/cifar/cl_non_lin_pred_minv6_default.yaml
@@ -29,13 +29,12 @@ method_kwargs:
   pred_weight_decay: 1e-6
   pred_lr_init: 1e-3
   pred_steps_target: 25
-  pred_train_type: 'random'
+  pred_train_type: 'overfit'
   pred_clip_grad: 0.0
-  pred_eval_steps: 10
   clip_pred_loss: 1.0
   patience: 1
   pred_kwargs:
-    layers: 3
+    layers: 2
     hidden_dim: 128
     activation: "relu" # [relu, tanh]
 data:
@@ -69,4 +68,3 @@ sync_batchnorm: True
 accelerator: "gpu"
 strategy: "ddp"
 precision: 32
-seed: 0
